--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7adb45b225867a83b902",
+    "/css/app.css": "/css/app.css?id=29ffc654f475285e5b8b"
 }
